issue42 ログイン中のユーザーの取得
